testsuite/gnatprove/tests/581__illegal_generic_and_type_invs/test.out
gen.ads:14:09: info: invariant check proved on default value (CVC5: 1 VC), in instantiation at inst.ads:3
gen.ads:14:74: info: in default value of private type at gen.ads:3, in instantiation at inst.ads:3
gen.ads:14:74: info: range check proved (CVC5: 2 VC), in instantiation at inst.ads:3
inst_child.ads:7:09: error: instance of a generic unit declared in a package containing a type with an invariant outside of this package is not yet supported
inst_child.ads:7:09: error: package "Inst" declares a type with an invariant
inst_p_child.ads:7:11: error: instance of a generic unit declared in a package containing a type with an invariant outside of this package is not yet supported
inst_p_child.ads:7:11: error: package "Inst" declares a type with an invariant
test.adb:6:14: error: instance of a generic unit declared in a package containing a type with an invariant outside of this package is not yet supported
test.adb:6:14: error: package "Inst" declares a type with an invariant
test.adb:7:12: error: instance of a generic unit declared in a package containing a type with an invariant outside of this package is not yet supported
test.adb:7:12: error: package "Inst" declares a type with an invariant
gnatprove: error during flow analysis and proof
